# routes/web.php
@@ -77,3 +77,5 @@ Route::get('/editTrial', 'TrialController@editTrialData')->name('editTrial');
 Route::get('/queryTrial', 'TrialController@queryTrialData')->name('queryTrial');
 
 Route::post('/saveTrial', 'TrialController@saveTrialData')->name('saveTrial');
+
+Route::post('/getBearerToken', 'AuthController@getBearerToken')->name('getBearerToken');
